--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ out = 'out'
 libs = ['lib']
 remappings = [
     "forge-std/=lib/forge-std/src/",
+    "@Openzeppelin/=lib/openzeppelin-contracts/"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
